--- a/style/main.css
+++ b/style/main.css
@@ -125,6 +125,7 @@ left center no-repeat;display: inline-block; text-align: center;line-height: 20p
 .hr_7{height: 7px;overflow: hidden;}
 .hr_15{height: 15px;overflow: hidden;}
 .hr_25{height: 25px;overflow: hidden;}
+.hr_45{height: 45px;overflow: hidden;}
 
 /*产品分类*/
 .products .leftArea{width: 185px;}
@@ -150,7 +151,7 @@ left center no-repeat;display: inline-block; text-align: center;line-height: 20p
 
 
 /*标题*/
-.products_title{height:34px;border-bottom: #CCCCCC solid 2px; }
+.products_title{height:34px;border-bottom: #CCCCCC solid 2px; margin-top: 50px;}
 .products_title h3{width: 130px;border-bottom: #096DBA solid 2px;height: 34px;line-height: 34px;text-indent: 9px;/*首行缩进为9  padding-left效果一样*/ margin-top: -2px;position: relative;}
 
 /*商品*/ 
@@ -210,6 +211,150 @@ left center no-repeat;display: inline-block; text-align: center;line-height: 20p
 .show_select{position: absolute;left: -1px;top:22px;background-color: #FFF;width: 100%;border: #999 solid 1px;display: none;}
 .show_select li{padding-left: 10px;}
 
+/*商品介绍*/
+.grey{background-color: #F0F0F0;}
+/*位置*/
+.userPosition{font-size: 12px;font-family: Verdana;margin-top: 25px;margin-bottom: 15px;}
+.userPosition em,
+.userPosition strong,
+.userPosition span,
+.userPosition a{font-size: 12px;}
+.userPosition em{font-style:normal;}
+.userPosition a:hover{text-decoration: underline;}
+.discription_info{background-color: #FFF;}
+.description{border: #CCC solid 1px;}
+.description .leftArea{width: 309px;}
+.description .rightArea{width: 688px;border-left: #CCC solid 1px;}
+
+/*图片展示*/
+.description_imgs .big{height: 340px;text-align: center;}
+.des_smimg{padding-left: 1px;width: 265px;margin: 0 auto;/*左右居中*/}
+.des_smimg li{float: left;margin-left: -1px;/*解决两个小图的边框重叠问题*/}
+.des_smimg img{border: #CCC solid 1px;}
+.des_smimg .active{border-color: #317EE7;position: relative;/*使该active的优先级高一些，不会被其他元素压住。*/}
+.des_content{padding: 10px;}
+.des_content_tit{font: bold 16px/22px /*16的文字，22的行高*/ "Microsoft YaHei","微软雅黑";padding: 13px 25px;}
+.des_content .dl{margin-bottom:8px; }
+.des_content .dt{width: 75px;float: left;color: #666;text-indent: 17px;line-height: 25px;}
+.des_content .dd{padding-left: 75px;*padding-left:0;/*只有在IE6中变成0*/}
+.des_money{font-size: 18px;color: #F30;font-family: Verdana;}
+.des_money em{font-style: normal;font-size: 12px;}
+
+/*换购*/
+.hg{padding-top: 2px;display: inline-block;}
+.hg_icon{width: 55px;height: 18px;display: inline-block;background: url(../images/icon/hg_icon.jpg) top no-repeat;color: #FFF;font-style: normal;text-indent:6px;line-height: 18px;margin-right: 10px;}
+.hg_icon{vertical-align: middle;}
+
+/*送货*/
+.des_position{background-color: #F2F2F2;padding: 15px 0; }
+.theGoods{line-height: 24px; padding-left: 10px;}
+.des_content .colorSelect{line-height: 41px;}
+.des_item{color: #000;padding: 9px 10px;border: #CCC solid 1px;float: left;background-color: #FFF;margin-right: 10px;}
+.des_item_active{border-color: #317EE7;}
+.des_item_sm{padding: 3px 7px;margin-bottom: 8px;}
+.des_content .des_select_more{line-height: 55px;}/*优先级问题 需要加上父级标签*/
+
+/*数量*/
+.des_number{border: #B2B2B2 solid 1px;height: 32px;width: 82px;float: left;}
+.des_number div{height: 100%;float: left;}
+.reduction,.plus{width: 15px;background-color: #C3BCC3;line-height: 32px;text-align: center;color: #333;}
+.reduction{border-left:#C3BCC3 solid 1px; }
+.plus{border-right:#C3BCC3 solid 1px;}
+.des_input{width: 42px;background: url(../images/icon/background.jpg) left top no-repeat;padding: 0 4px;}
+.des_input input{width: 100%;height: 100%;line-height: 32px \9; text-align: center;}
+.xg{line-height: 32px;float: left;padding-left: 10px;font-weight: bold;color: #656565;}
+.xg em{color: #FB7700;font-style: normal;}
+.des_content .des_num{line-height: 32px;}
+
+/*已选择*/
+.des_select{font-weight: bold; margin: 22px 0 12px;text-indent: 17px;}
+.des_select span{color: #0479C9;}
+.shop_buy{text-align: center;}
+.shopping_btn,.buy_btn{display: inline-block;width: 184px;height: 48px;background: url(../images/icon/shopping_btn.jpg) left top no-repeat;}
+.line{height: 90px;width: 1px;overflow: hidden;background-color: #CCC;display: inline-block;margin: 0 40px;}
+.line,.shopping_btn,.buy_btn{vertical-align: middle;}
+.shop_fp{color:#CCC;text-indent: 17px; }
+
+/*产品介绍*/
+.des_info .leftArea{width: 190px;}
+.des_info .rightArea{width: 790px;}
+.recommend{border:#CCC solid 1px;background-color: #FFF;padding-bottom: 15px;}
+.recommend .tit{height: 39px;border-bottom:#CCC solid 1px;line-height: 39px;text-indent: 15px;font-size: 14px;background-color: #F3F3F3;}
+.recommend .item{float: none;height: auto;}
+.recommend .money{padding-top:0;}
+
+/*详细介绍*/
+.des_infoContent{border: #CCC solid 1px;background-color: #FFF;}
+.des_tit{height: 39px;border-bottom: #CCC solid 1px;background: url(../images/icon/des_tit.jpg) left top repeat-x;}
+.des_tit li{float: left;width: 50%;font: 14px/39px "宋体";/*font-size: 14px;line-height: 39px;*/ ;text-align: center;border-left: #CCC solid 1px;margin-left: -1px;}
+.des_tit .active{background-color: #0479CA;font-weight: bold;color: #FFF;position: relative;}
+.des_tit span{background:url(../images/icon/des_tit2.png) left center no-repeat;padding-left: 32px;display: inline-block;line-height: 39px;}
+.ad{padding: 30px 0;text-align: center;}
+.info_tit{height: 26px;border-bottom: #CCC solid 1px;font-family: "Microsoft YaHei","微软雅黑";margin-bottom: 18px;}
+.info_tit h3{float: left;font-size: 16px;color: #2357A5;border-bottom: #2357A5 solid 1px; height: 26px;margin-bottom: -1px;position: relative;/*为了兼容性*/ padding-right: 8px;}
+.info_tit h4{font-size: 12px;line-height: 26px;padding-left: 4px;color: #656565;}
+.info_text{padding: 0 20px;}
+.info_text p{line-height: 22px;font-size: 14px;color:#656565; }
+.center{display: block;margin: 0 auto;}
+
+/*商品评价*/
+.shopDes_tit{line-height: 38px;height: 38px;font-size:14px;color: #656565;padding-left: 10px;}
+.score{font-family: "Microsoft YaHei","微软雅黑"; float: left;margin-right: 10px;}
+.score_box{padding-left: 10px; height: 120px;}
+.score em{font-size: 18px;color: #65657D;font-style: normal;}
+.score span{font-size: 50px;color: #FF8F00;}
+.score_speed{float: left;width: 450px;line-height: 16px;font-size: 12px;margin-top: 18px;position: relative;}
+.score_speed_text{height: 16px; margin-bottom: 10px;color:#FFF;overflow: hidden;background-color: #BDBDBD;}
+.score_speed_text li{float: left;}
+.score_speed_text .speed_01{width: 114px; text-indent: 26px;}
+.score_speed_text .speed_02{width: 82px;}
+.score_speed_text .speed_03{width: 76px;}
+.score_speed_text .speed_04{width: 65px;}
+.score_num{position: absolute;left: 94%;top:-21px;text-align: center;width: 25px;height: 14px;background-color: #7F7F7F;color: #FFF;}
+.score_num i{border-width: 4px;border-style: solid dashed dashed dashed;/*虚线*/ border-color: #7F7F7F transparent transparent transparent;/*透明*/ width: 0;height: 0;}
+
+/*满意切换*/
+.review_tab{height: 32px;background-color: #F2F2F2}
+.review{line-height: 32px;height: 100%;padding-left: 20px;}
+.review li{float: left;height: 100%;margin-right: 40px;}
+.review li a{display: inline-block;height: 30px;line-height: 30px; padding: 0 5px;}
+.review .active{color: #317DE6;font-weight: bold;border-bottom: #317DE6 solid 2px;margin-bottom: -2px;position: relative;}
+.review_sort{padding: 5px 5px 0 0;}
+.review_sort a{display: inline-block;line-height: 20px;height: 20px;border:#CCC solid 1px; padding: 0 20px 0 6px;background: url(../images/icon/down.jpg) 68px center no-repeat;}
+.review_userHead{width: 170px;}
+.review_list{padding-top: 18px;margin-bottom: 10px;}
+.review_user{width: 60px;text-align: center;margin-left: 40px;}
+.review_user img{width: 60px;height: 60px;display: block;}
+.review_user p{line-height: 20px;}
+.review_cont{padding-left: 170px;}
+.starsBox .stars{margin-top: 1px;}
+.stars_text{font-weight: bold;padding-left: 10px;}
+.review_t{height: 30px;padding-top: 5px;}
+.review_cont p{line-height: 30px;}
+
+/*购物车*/
+.stepBox{width: 396px;padding-top: 26px;}
+.step{background: url(../images/shopclass.jpg) left top no-repeat;height: 25px;}
+.step_text{color: #FFF;font-size: 12px;line-height: 30px;}
+.step_text li{float: left;}
+.s01,.s03{width: 30%;}
+.s02{width: 40%;text-align: center;}
+.s03{text-align: right;}
+.step_text .active{color: #F3E402;font-weight: bold;}
+.shoppingCart{padding-top: 10px;}
+.shopping_item{border: #CCC solid 1px;}
+.shopping_tit{height: 31px; background: url(../images/shopping_bj.jpg) left top repeat-x;color: #444444;font-size: 16px;font-family: "Microsoft YaHei","微软雅黑";line-height: 31px;text-indent: 12px;}
+.padding_shop{padding: 25px 30px;}
+.shopping_list_text{float: left;width: 76px;line-height: 24px;font-size: 12px;}
+.shopping_list li{height: 24px;margin-bottom: 10px;}
+.shopping_list_text em{color: #F30;font-style: normal;margin-right: 5px;}
+.input{height:  22px;border: #CCC solid 1px;padding: 0 6px;width: 110px;}
+.input_big{width: 392px;}
+.input_sm{width: 64px;}
+.input_mid{width: 84px;}
+.jian{padding: 0 3px;}
+.affirm{width: 114px;height: 28px;background:url(../images/shouhuo.jpg) left top repeat-x;}
+.radio{position: relative;top: 3px;margin-right: 4px;}
 
 
 
