--- a/style/main.css
+++ b/style/main.css
@@ -343,18 +343,70 @@ left center no-repeat;display: inline-block; text-align: center;line-height: 20p
 .step_text .active{color: #F3E402;font-weight: bold;}
 .shoppingCart{padding-top: 10px;}
 .shopping_item{border: #CCC solid 1px;}
-.shopping_tit{height: 31px; background: url(../images/shopping_bj.jpg) left top repeat-x;color: #444444;font-size: 16px;font-family: "Microsoft YaHei","微软雅黑";line-height: 31px;text-indent: 12px;}
+.shopping_tit{height: 31px; background: url(../images/shopping_bj.jpg) left top repeat-x;color: #444444;font-size: 16px;font-family: "Microsoft YaHei","微软雅黑";line-height: 31px;text-indent: 12px;border-bottom: #E3E3E3 solid 1px;}
 .padding_shop{padding: 25px 30px;}
 .shopping_list_text{float: left;width: 76px;line-height: 24px;font-size: 12px;}
 .shopping_list li{height: 24px;margin-bottom: 10px;}
 .shopping_list_text em{color: #F30;font-style: normal;margin-right: 5px;}
-.input{height:  22px;border: #CCC solid 1px;padding: 0 6px;width: 110px;}
+.input{height:  22px;line-height: 22px \9; border: #CCC solid 1px;padding: 0 6px;width: 110px;}
 .input_big{width: 392px;}
 .input_sm{width: 64px;}
 .input_mid{width: 84px;}
 .jian{padding: 0 3px;}
 .affirm{width: 114px;height: 28px;background:url(../images/shouhuo.jpg) left top repeat-x;}
 .radio{position: relative;top: 3px;margin-right: 4px;}
+.affirm_blue{width: 60px;height: 24px;background:url(../images/shouhuo.jpg) left top repeat-x;}
+.cancle{width: 60px;height: 24px;background-color: #BDB7B7;}
+.invoice_affirm,.invoice_cancle{float: left;margin-left: 10px;margin-top: 10px;}
+
+/*送货清单*/
+.backCar{float: right;font-size: 12px;font-family: "宋体";margin-right: 33px;color: #3377FF;}
+.backCar:hover{text-decoration: underline;}
+.cart_item{border-bottom:#CCC solid 1px; float: left;}
+.cart_head{padding-top: 5px;}
+.cart_head .cart_item{line-height: 28px;}
+.t_name{width: 440px;padding-left: 30px;}
+.t_price{width: 134px;}
+.t_return{width: 136px;}
+.t_num{width: 135px;}
+.t_subtotal{width: 123px;}
+.t_red{color: red;}
+.cart_cont{border-bottom: #CCC solid 1px;}
+.cart_cont .cart_item{border-bottom: none;}
+.cart_cont .t_price,
+.cart_cont.t_return, 
+.cart_cont.t_num,
+.cart_cont.t_subtotal{line-height: 37px;}
+.cart_shopInfo img{width: 90px;height: 100px;display: block;float: left;}
+.cart_shopInfo_cont{padding-left: 90px;font-size: 12px;}
+.cart_link{line-height:37px;margin-bottom: 15px; }
+.cart_link a:hover{text-decoration: underline;}
+.cart_info{color: #000;}
+.cart_message{line-height: 40px;padding-left:  30px;font-size: 12px;margin-bottom: 10px;color: blue;}
+.cart_prompt{line-height: 40px;padding-left: 30px;color: red;}
+.cart_prompt_icon{height: 12px;width: 12px;display: inline-block;background:url(../images/icon/cart_prompt_icon.jpg) left top no-repeat;margin-right: 11px;}
+.pd_10{padding-bottom: 10px;}
+.cart_no_border{border-bottom: none;}
+.cart_rmb{margin-bottom: 16px;}
+.cart_rmb i{font-size: 14px;color: #999;font-style: normal;}
+.cart_rmb span{font-size: 24px;color: red;font-family: Verdana;font-weight: bold;}
+.cart_btnBox{text-align: right;}
+.cart_btn{width: 165px;height: 33px;background-color: #E50007;font:18px;line-height: 33px;font-family:"Microsoft YaHei","微软雅黑";color: #FFF; }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
