--- a/style/main.css
+++ b/style/main.css
@@ -393,26 +393,33 @@ left center no-repeat;display: inline-block; text-align: center;line-height: 20p
 .cart_btnBox{text-align: right;}
 .cart_btn{width: 165px;height: 33px;background-color: #E50007;font:18px;line-height: 33px;font-family:"Microsoft YaHei","微软雅黑";color: #FFF; }
 
+/*登录*/
+.login_logo .comWidth{width: 460px;}
+.welcome_tit{font: 22px/85px "Microsoft YaHei","微软雅黑";color: #FFF;float: left;padding-left: 24px; }
+.loginBox{width: 458px;border: #999 solid 1px;margin: 10px auto;position: relative;}
+.login_cont{padding: 15px 76px;}
+.l_tit{color: #666;line-height: 20px;}
+.login_input{border: #999 solid 1px;line-height: 32px;text-indent: 5px; width: 100%;}
+.user_icon{background: url(../images/icon/user_bg.jpg) right center no-repeat;}
+.password_icon{background: url(../images/icon/password_bg.jpg) right content-box no-repeat;}
+.login_input{margin-bottom: 10px;}
+.autoLogin{padding-top: 10px;}
+.checked{position: relative;top: 3px;margin-right: 3px;padding-bottom: 28px;}
+.login_check .autoLogin{float: left;padding-right: 25px;}
+.login_btn{width: 309px;height: 36px;background: url(../images/login_btn.jpg) left top no-repeat;}
+.login_partners{padding-top: 34px;}
+.login_list li{float: left;line-height: 20px;font-size: 12px;}
+.login_list span{color: #999;margin: 0 2px;}
+.reg_link{width: 115px;height: 31px;background: url(../images/register.jpg) left top no-repeat;position: absolute;right: 41px;bottom: -31px;}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+/*注册*/
+.reg_logo .comWidth{width: 630px;}
+.regBox{width: 628px;border: #999 solid 1px;margin: 10px auto;}
+.reg_item{font-size: 14px;line-height: 34px;font-family: "宋体";width: 110px;text-align: right;float: left;/*内嵌元素收到text-aline控制！！！能使文字都向右对其*/}
+.reg_item i{color: red;font-style: normal;margin-right: 5px;}
+.input_item{width: 306px;float: left;}
+.regBox li{height: 70px;vertical-align: top;}
+.regBox .autoLogin{height: 46px;padding: 0;}
+.reg_btn{width: 309px;height: 36px;background: url(../images/submit.jpg) left top no-repeat;}
+.regBox .login_cont{padding: 45px 76px 20px 76px;}
 
